--- a/Ders_3.ipynb
+++ b/Ders_3.ipynb
@@ -43,7 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "owd = os.getcwd()\n",
+    "\n",
     "os.chdir('')\n",
+    "\n",
     "print(os.getcwd())\n",
     "print(os.listdir())"
    ]
@@ -66,6 +69,9 @@
     "# Klasör Silme\n",
     "os.rmdir()\n",
     "os.removedirs()\n",
+    "\n",
+    "# Dosya silme\n",
+    "os.remove()\n",
     "\n",
     "# Dosya adı değiştirme\n",
     "os.rename()"
@@ -120,7 +126,6 @@
    "outputs": [],
    "source": [
     "# os.environ\n",
-    "os.environ\n",
     "\n",
     "print(os.environ.get('HOMEPATH'))"
    ]
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35b68222",
    "metadata": {},
    "outputs": [],
@@ -178,20 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "57bacefa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_io.TextIOWrapper name='test_dosyasi.txt' mode='r' encoding='utf-8'>\n",
-      "test_dosyasi.txt\n",
-      "r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f)\n",
     "print(f.name)\n",
@@ -231,29 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6f9c295e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bu bir test dosyasıdır!!!!\n",
-      "İkinci Satır\n",
-      "Üçüncü Satır\n",
-      "Dördüncü Satır\n",
-      "Beşinci Satır\n",
-      "Altıncı Satır\n",
-      "Yedinci Satır\n",
-      "Sekizinci Satır\n",
-      "Dokuzuncu Satır\n",
-      "Onuncu Satır\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# bundan sonra burada gösterilecek.\n",
     "\n",
@@ -292,27 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f429429d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bu bir test dosyasıdır!!!!\n",
-      "İkinci Satır\n",
-      "Üçüncü Satır\n",
-      "Dördüncü Satır\n",
-      "Beşinci Satır\n",
-      "Altıncı Satır\n",
-      "Yedinci Satır\n",
-      "Sekizinci Satır\n",
-      "Dokuzuncu Satır\n",
-      "Onuncu Satır"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# File Handle'lar ile her bir satırı for loop ile geçebiliriz.\n",
     "\n",
@@ -344,27 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "817c075f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bu bir test dosyasıdır!!!!\n",
-      "İkinci Satır\n",
-      "Üçüncü Satır\n",
-      "Dördüncü Satır\n",
-      "Beşinci Satır\n",
-      "Altıncı Satır\n",
-      "Yedinci Satır\n",
-      "Sekizinci Satır\n",
-      "Dokuzuncu Satır\n",
-      "Onuncu Satır"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# while len(f_icerik) > 0 ile dosya bitene kadar okuma\n",
     "\n",
@@ -388,19 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f8a40f13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bu bir tes\n",
-      "Bu bir tes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# f.seek() NOT: ICERIK UZERINDE DEĞIL FILE HANDLE UZERINDE\n",
     "\n",
@@ -427,22 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "39cd904f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-95c8926008f6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#     f.write('Bir şeyler')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# with open('test_dosyasi2.txt', 'w', encoding='utf-8') as f:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Eğer dosyayı oluşturmak veya olan dosyanın üzerine yazmak istiyorsak 'w' kullanırız.\n",
     "\n",
@@ -748,6 +671,34 @@
     "email = input('Lütfen E-Mail adresinizi giriniz: ')\n",
     "\n",
     "if validity_check(email):\n",
+    "    print('Mail adresiniz doğrudur.')\n",
+    "else:\n",
+    "    print('Mail adresiniz yanlıştır.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cafa2b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re.Verbose ile daha okunabilir regexler yazabiliriz\n",
+    "\n",
+    "def gecerlilik_testi(email):\n",
+    "    regex = re.compile(\n",
+    "        r'''\n",
+    "        ^(?:[a-zA-Z0-9]+[._-]?[a-zA-Z0-9]+)+    # kullanıcı adı bölümü\n",
+    "        @                                       # @ işaret,\n",
+    "        (?:[a-zA-Z0-9]+[_-]?[a-zA-Z0-9]+)+      # domain adı bölümü\n",
+    "        \\.[a-zA-Z]{2,3}                         # topdomain adresi\n",
+    "        (?:\\.[a-zA-Z]{2})?$                     # opsiyonel olarak ülke kodu\n",
+    "        ''', re.VERBOSE)\n",
+    "    return bool(regex.search(email))\n",
+    "\n",
+    "email_adresi = input('Lütfen E-Mail adresinizi giriniz: ')\n",
+    "\n",
+    "if gecerlilik_testi(email_adresi):\n",
     "    print('Mail adresiniz doğrudur.')\n",
     "else:\n",
     "    print('Mail adresiniz yanlıştır.')"
